--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -H 0.0.0.0 -p 44385",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -H 0.0.0.0 -p 44385",
     "lint": "biome check",
     "format": "biome format --write"
   },
   "dependencies": {
+    "jose": "^6.1.3",
     "jsonwebtoken": "^9.0.3",
     "next": "16.1.1",
     "pnpm": "^10.27.0",
