--- a/package.json
+++ b/package.json
@@ -36,10 +36,12 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/supertest": "^6.0.3",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "husky": "^9.1.7",
     "prisma": "6.18.0",
+    "supertest": "^7.2.2",
     "tailwindcss": "^4",
     "typescript": "^5",
     "vitest": "^4.0.17"
