--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
+    "dev": "node scripts/dev.js",
     "start": "next start -H 0.0.0.0 -p 44385",
     "lint": "biome lint --write",
     "format": "biome format --write",
@@ -34,6 +33,8 @@
   },
   "dependencies": {
     "@anthropic-ai/claude-code": "^2.1.9",
+    "@hugeicons/core-free-icons": "^3.1.1",
+    "@hugeicons/react": "^1.1.4",
     "@prisma/client": "6.18.0",
     "@scalar/nextjs-api-reference": "^0.9.9",
     "g": "^2.0.1",
@@ -64,7 +65,9 @@
     "@vitest/browser-playwright": "^4.0.17",
     "@vitest/coverage-v8": "^4.0.17",
     "@vitest/ui": "4.0.17",
+    "child-process": "^1.0.2",
     "chromatic": "^13.3.5",
+    "concurrently": "^9.2.1",
     "cross-env": "^10.1.0",
     "dotenv": "^17.2.3",
     "husky": "^9.1.7",
@@ -75,6 +78,7 @@
     "tailwindcss": "^4",
     "typescript": "^5",
     "vite": "^7.3.1",
-    "vitest": "^4.0.17"
+    "vitest": "^4.0.17",
+    "wait-on": "^9.0.3"
   }
 }
