--- a/package.json
+++ b/package.json
@@ -34,16 +34,27 @@
   },
   "dependencies": {
     "@anthropic-ai/claude-code": "^2.1.9",
+    "@base-ui/react": "^1.1.0",
+    "@hugeicons-pro/core-bulk-rounded": "^3.1.0",
+    "@hugeicons-pro/core-stroke-rounded": "^3.1.0",
     "@hugeicons/core-free-icons": "^3.1.1",
     "@hugeicons/react": "^1.1.4",
     "@prisma/client": "6.18.0",
     "@scalar/nextjs-api-reference": "^0.9.9",
+    "@tanstack/react-query": "^5.90.20",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "g": "^2.0.1",
     "jose": "^6.1.3",
     "next": "16.1.1",
     "pnpm": "^10.27.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hook-form": "^7.71.1",
+    "shadcn": "^3.7.0",
+    "tailwind-merge": "^3.4.0",
+    "tailwind-variants": "^3.2.2",
+    "tw-animate-css": "^1.4.0",
     "zod": "^4.3.5"
   },
   "devDependencies": {
