--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: E2E Tests
+name: CI (Continuous Integration)
 on:
   push:
     branches: [develop]
@@ -6,7 +6,7 @@ on:
 
 jobs:
   tests:
-    name: Run integration tests (Vitest)
+    name: Run tests
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
@@ -28,6 +28,15 @@ jobs:
 
       - name: Generate Prisma Client
         run: pnpm prisma:generate
+
+      - name: Type check
+        run: pnpm tsc --noEmit
+
+      - name: Lint
+        run: pnpm biome lint
+
+      - name: Run unit tests
+        run: pnpm test:unit
 
       - name: Run integration tests
         run: pnpm test:integration
