--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@ GITHUB_CLIENT_SECRET=61381ddcf834ded0529acda5a0ae97ac739224e5
 SLACK_CLIENT_ID=10445929589184.10445930901056
 SLACK_CLIENT_SECRET=10445929589184.10445930901056
 SLACK_DEFAULT_CHANNEL_ID=C0AD3TBUJ64
+
+NEXT_PUBLIC_APP_URL=https://elo.stratustelecom.com.br:44385
