chore: add import env file in docker compose

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ version: '3.8'
 services:
   nextjs:
     image: ghcr.io/stratusti/steelelo:latest
+    env_file: .env
     container_name: nextjs-app
     restart: unless-stopped
     ports:
