--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "cmdk": "^1.1.1",
     "frimousse": "^0.3.0",
     "g": "^2.0.1",
+    "input-otp": "^1.4.2",
     "jose": "^6.1.3",
     "lucide-react": "^0.563.0",
     "next": "16.1.1",
